[gd_scene load_steps=18 format=2]

[ext_resource path="res://scenes/ThrowingWeapon.gd" type="Script" id=1]
[ext_resource path="res://assets/resources/sheet.png" type="Texture" id=2]
[ext_resource path="res://sounds/swang.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/shroom.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 4, 4 )

[sub_resource type="Animation" id=17]
resource_name = "default"
length = 1.226
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:SPEED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.56 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 200, 20, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.562647 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.44, 0.48 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:DONE")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.35, 0.44 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.44 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=40]
resource_name = "done"
length = 0.88
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:SPEED")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.05, 0.21 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 20, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.21 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.09, 0.13 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:DONE")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.09 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.09 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Curve" id=32]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -78.5455 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=29]
curve = SubResource( 32 )

[sub_resource type="Curve" id=33]
_data = [ Vector2( 0, 0.277273 ), 0.0, 0.0, 0, 0, Vector2( 0.141304, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.586957, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=31]
curve = SubResource( 33 )

[sub_resource type="ParticlesMaterial" id=34]
flag_disable_z = true
spread = 37.94
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_random = 1.0
angle_curve = SubResource( 29 )
scale = 4.0
scale_curve = SubResource( 31 )

[sub_resource type="Curve" id=35]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, -194.727 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=36]
curve = SubResource( 35 )

[sub_resource type="Curve" id=38]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.205298, 0.981818 ), 0.0, 0.0, 0, 0, Vector2( 0.692053, 0.936364 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=39]
curve = SubResource( 38 )

[sub_resource type="ParticlesMaterial" id=37]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 42.11
flatness = 0.81
gravity = Vector3( 0, 98, 0 )
initial_velocity = 68.86
initial_velocity_random = 0.75
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle_curve = SubResource( 36 )
scale = 4.0
scale_curve = SubResource( 39 )
color = Color( 0.137255, 0.337255, 0.247059, 1 )
hue_variation = 0.1
hue_variation_random = 0.44

[node name="ThrowingWeapon" type="Area2D"]
script = ExtResource( 1 )
SPEED = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 16 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 12
vframes = 12
frame = 38

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 17 )
anims/done = SubResource( 40 )

[node name="Particles2D" type="Particles2D" parent="."]
lifetime = 0.5
fract_delta = false
local_coords = false
process_material = SubResource( 34 )

[node name="Particles2D2" type="Particles2D" parent="."]
emitting = false
lifetime = 0.5
explosiveness = 1.0
process_material = SubResource( 37 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
pitch_scale = 0.74

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 1.43

[connection signal="area_entered" from="." to="." method="_on_ThrowingWeapon_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_ThrowingWeapon_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
